# GuardianCruise

./: .gitignore  Attempt one.str  CMakeLists.txt  Cohere_To_Driver.py  DeepFake.py  README.md  Socket_Connection.py  Speech-Recognition.py  Text_Sender.py  blink.py  chat_history.pkl  chatreceiver.cpp  chatreceiver.h  client.py  image_capture.py  main.cpp  main.py  main.qml  my_file.txt  pyvenv.cfg  server.py  server1.py  serverText.py  test client.py  videoreceiver.cpp  videoreceiver.h
APIs/: APIs.qrc  google_maps.html
Backup/: Cohere_To_Driver.py  Cohere_To_Driver_2.py  DeepFake.py  Socket_Connection.py  SpeechRecognizer.py  Text_Sender.py  testwavtrans.py
ImageClassigication/: LLaVA.py  client.py  cohereNegativityClassification.py  his_server.py  rep.py  safe_text.py  server_lava.py  test_client.py
ImageProcessing/: blink.py  image_capture.py
Images/: images.qrc  profileImg
QMLfiles/: crash.qml  graphs.qml  home.qml
Scripts/: activate  activate.bat
bgAsset/: bgAsset.qrc
fonts/: fonts.qrc
socketsPY/: tempCodeRunnerFile.py  videopull.py
socketsPY/ImageProcessing/: realTimeStream.py
